typer: adjusted width to prevent blinker jumping backwards 1ch on animation copmpletion

--- a/src/styles/x.css
+++ b/src/styles/x.css
@@ -107,7 +107,7 @@
   display: flex;
   justify-content: center;
   margin: 0 auto;
-  width: 30ch;
+  width: 29ch;
 }
 
 .typer p {
